Formulario HTML Actividad Evaluable 2 LDM

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>Formulario para reclamaciones</h1>
-      <form action="completado.html" method="post">
+      <form action="completado.html" method="#git ">
         <!-- Nombre y Apellido -->
         <div class="formulario columna">
           <div class="form-column">
